# CPU-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.sh  convert_meshes.sh  run.sh  run_old.sh
assets/json/: cube_triangulated.json  sphere_triangulated.json  sphere_triangulated_smooth.json
src/: app_config.h  main.cpp  mesh.h  mesh_parser.cpp  mesh_parser.h  scene_object.h  vector2.h  vector3.cpp  vector3.h  vertex.h
src/SFML_test/: CMakeLists.txt  sfml_test.cpp
src/maths_lib/: CMakeLists.txt  matrix4.h  vector2.h  vector3.h  vector4.h
src/mesh_parser/: CMakeLists.txt  mesh.h  mesh_parser.cpp  mesh_parser.h  vertex.h  vertex_key.h  vertex_key_hash.h
src/rendering_lib/: CMakeLists.txt  scene_object.cpp  scene_object.h
src/tools/convert_mesh/: CMakeLists.txt  convert_mesh.cpp
